--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "dev": "vite",
         "build": "tsc -b && vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d dist"
     },
     "dependencies": {
         "@hookform/resolvers": "^3.9.0",
@@ -22,6 +24,7 @@
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "date-fns": "^3.6.0",
+        "framer-motion": "^11.3.24",
         "lucide-react": "^0.408.0",
         "react": "^18.3.1",
         "react-day-picker": "^8.10.1",
@@ -43,6 +46,7 @@
         "eslint": "^8.57.0",
         "eslint-plugin-react-hooks": "^4.6.2",
         "eslint-plugin-react-refresh": "^0.4.7",
+        "gh-pages": "^6.1.1",
         "postcss": "^8.4.39",
         "tailwindcss": "^3.4.6",
         "typescript": "^5.2.2",
