--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
         "clsx": "^2.1.1",
         "date-fns": "^3.6.0",
         "framer-motion": "^11.3.24",
+        "i18next": "^23.12.3",
         "lucide-react": "^0.408.0",
         "react": "^18.3.1",
         "react-day-picker": "^8.10.1",
         "react-dom": "^18.3.1",
         "react-hook-form": "^7.52.1",
+        "react-i18next": "^15.0.1",
         "react-icons": "^5.2.1",
         "react-router-dom": "^6.25.1",
         "tailwind-merge": "^2.4.0",
